Update 7.LAB MANUAL: Microsoft Excel – Practical Exercises .md

--- a/7.LAB MANUAL: Microsoft Excel – Practical Exercises .md
+++ b/7.LAB MANUAL: Microsoft Excel – Practical Exercises .md
@@ -136,3 +136,59 @@ To secure an Excel workbook by adding a password.
 
 **Result**  
 Successfully applied and removed password protection for an Excel workbook.  
+
+# 📊6 : Create a Pivot Table in Excel
+
+## 🧠 Step-by-Step Instructions
+
+### 1. Select Your Data  
+Click anywhere inside your table (Excel will detect the range automatically).
+
+---
+
+### 2. Insert Pivot Table  
+Go to the top menu:  
+**Insert → PivotTable**
+
+In the dialog box:  
+- Choose **Select a table or range**  
+- Verify that your range is correct  
+- Choose where you want the Pivot Table (**New Worksheet** recommended)  
+- Click **OK**
+
+---
+
+### 3. Build Your Pivot Table  
+You’ll now see the **PivotTable Fields** pane on the right.
+
+Drag and drop fields into these areas:
+
+| Area | Field |
+|------|--------|
+| **Rows** | Region |
+| **Columns** | Product |
+| **Values** | Total Sales *(set to “Sum of Total Sales”)* |
+| **Filters (optional)** | Salesperson |
+
+---
+
+### 4. Format Your Pivot Table  
+Click inside the Pivot Table → Go to:  
+**PivotTable Analyze → Design**
+
+Then:  
+- Choose a style you like  
+- Enable or disable totals as needed  
+
+---
+
+## 🎯 Example Pivot Table Result
+
+| Region | Headphones | Keyboard | Laptop | Monitor | Mouse | **Grand Total** |
+|:-------|------------:|----------:|--------:|--------:|------:|----------------:|
+| **East** |  | 2475 |  |  |  | **2475** |
+| **North** |  |  | 14400 |  | 1000 | **15400** |
+| **South** | 1200 |  | 4000 |  | 1250 | **6450** |
+| **West** |  |  |  | 3300 |  | **3300** |
+| **Grand Total** | **1200** | **2475** | **18400** | **3300** | **2250** | **27625** |
+
