Update 6.Lab : Microsoft Excel with Copilot – Smart Data & Financial Analysis.md

--- a/6.Lab : Microsoft Excel with Copilot – Smart Data & Financial Analysis.md
+++ b/6.Lab : Microsoft Excel with Copilot – Smart Data & Financial Analysis.md
@@ -1,4 +1,4 @@
-# **Lab 2: Microsoft Excel with Copilot – Smart Data & Financial Analysis**  
+# **Lab: Microsoft Excel with Copilot – Smart Data & Financial Analysis**  
 **(माइक्रोसॉफ्ट एक्सेल में को-पायलट – स्मार्ट डेटा एवं वित्तीय विश्लेषण)**  
 
 ---
