Update and rename 1.Document Summarization Lab (दस्तावेज़ संक्षेपण प्रयोगशाला).md to 2.Document Summarization Lab (दस्तावेज़ संक्षेपण प्रयोगशाला).md

--- a/2.Document Summarization Lab (दस्तावेज़ संक्षेपण प्रयोगशाला).md
+++ b/2.Document Summarization Lab (दस्तावेज़ संक्षेपण प्रयोगशाला).md
@@ -8,6 +8,8 @@
 **Women & Child Development Department / महिला एवं बाल विकास विभाग**  
 Download Link: [citizen-mannual.pdf](https://mksy.up.gov.in/women_welfare/pdf/citizen-mannual.pdf)
 
+## 🔗 Download Link
+[👉 शासनादेश PDF डाउनलोड करें](https://shasanadesh.up.gov.in/frmPDF.aspx?qry=MjAxIzM0IzkjMjAyNQ==)
 ---
 
 ## 2. Objective / उद्देश्य
@@ -127,6 +129,48 @@ The lab demonstrates how GenAI can extract and summarize the most relevant infor
 20. **Launch & Inauguration / योजना का शुभारंभ**
     - English: Who inaugurated the Mukhyamantri Kanya Sumangla Yojana and when?  
     - हिन्दी: मुख्यमंत्री कन्या सुमंगला योजना का उद्घाटन किसने और कब किया था?
+
+---
+
+# 📌 Bilingual Prompts for Copilot (Based on शासनादेश)
+
+## 1️⃣ सारांश / Summary
+- **Hindi:**  
+  इस शासनादेश का संक्षिप्त सारांश तैयार करें जिसमें परियोजना का नाम, स्वीकृत धनराशि और मुख्य शर्तें स्पष्ट हों।  
+- **English:**  
+  Summarize this government order, highlighting the project name, sanctioned amount, and key conditions.  
+
+---
+
+## 2️⃣ अनुपालन सूची / Compliance Checklist
+- **Hindi:**  
+  इस शासनादेश में दी गई सभी शर्तों और प्रतिबंधों की एक चेकलिस्ट तैयार करें ताकि अधिकारी आसानी से पालन कर सकें।  
+- **English:**  
+  Create a checklist of all rules and restrictions mentioned in this order for easy compliance by officers.  
+
+---
+
+## 3️⃣ वित्तीय विवरण / Financial Breakdown
+- **Hindi:**  
+  ₹44.82 लाख की धनराशि को अनुदान संख्या 57 और 83 के बीच कैसे बाँटा गया है, इसे तालिका में दिखाइए।  
+- **English:**  
+  Show how the ₹44.82 lakh allocation is divided between Grant No. 57 and Grant No. 83 in a clear table.  
+
+---
+
+## 4️⃣ प्रशिक्षण नोट / Training Note
+- **Hindi:**  
+  सरकारी सचिवों के लिए एक द्विभाषी (हिन्दी-अंग्रेज़ी) प्रशिक्षण नोट तैयार करें जिसमें शासनादेश की संरचना और उपयोग समझाया गया हो।  
+- **English:**  
+  Draft a bilingual (Hindi-English) training note for government secretaries explaining the structure and use of a government order.  
+
+---
+
+## 5️⃣ कार्यप्रवाह मानचित्र / Workflow Mapping
+- **Hindi:**  
+  इस शासनादेश के अनुसार धनराशि अवमुक्ति से लेकर रिपोर्टिंग तक की प्रक्रिया को चरणबद्ध कार्यप्रवाह आरेख में दिखाइए।  
+- **English:**  
+  Map the process from fund release to reporting (utilization certificate, progress review, portal upload) into a step-by-step workflow diagram.  
 
 ---
 
